--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                         </div>
                     </div>
                     <div class="img top-down">
-                        <img src="./images/14-1.png" alt="">
+                        <img src="./images/pantalla.png" alt="">
                     </div>
                 </div>
                 <!-- end slide item -->
@@ -352,7 +352,7 @@
             <div class="row">
                 <div class="col-4 col-md-4">
                     <div class="sp-item-img">
-                        <img src="./images/14-1.png" alt="">
+                        <img src="./images/pantalla.png" alt="">
                     </div>
                 </div>
                 <div class="col-7 col-md-8">
