--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
             <div class="section-header">
                 <h2>best selling</h2>
             </div>
-            <div class="row" id="best-products">
+            <div class="row" id="best-Products">
                 <div class="col-3 col-md-6 col-sm-12">
                     <div class="product-card">
                         <div class="product-card-img">
