--- a/index.html
+++ b/index.html
@@ -189,15 +189,12 @@
                     <div class="info">
                         <div class="info-content">
                             <h3 class="top-down">
-                                IPHONE 14 PRO MAX
+                                Mayor comodidad y realismo en cada imagen
                             </h3>
                             <h2 class="top-down trans-delay-0-2">
-                                Designed by Apple in California
-                            </h2>
+Pantalla de PC Curva                            </h2>
                             <p class="top-down trans-delay-0-4">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati dolor commodi dignissimos culpa, eaque eos necessitatibus possimus veniam, cupiditate rerum deleniti? Libero, ducimus error? Beatae velit dolore sint explicabo! Fugit.
-                            </p>
-                            <div class="top-down trans-delay-0-6">
+Una pantalla de PC curva ofrece una experiencia más inmersiva y cómoda para la vista. Su diseño se adapta al campo visual humano, reduciendo la fatiga ocular y mejorando la sensación de profundidad, ideal para trabajar, ver contenido multimedia o jugar.                            <div class="top-down trans-delay-0-6">
                                 <button class="btn-flat btn-hover">
                                     <span>shop now</span>
                                 </button>
