--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     <div class="info">
                         <div class="info-content">
                             <h3 class="top-down">
-                                Mayor comodidad y realismo en cada imagen
+                                Mayor comodidad y realismo en cada imagenn
                             </h3>
                             <h2 class="top-down trans-delay-0-2">
 Pantalla de PC Curva                            </h2>
