--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PESTAÑA DE PRUEBA</title>
+    <title>Lire + </title>
     
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -24,7 +24,7 @@
     <header>
         <!-- mobile menu -->
         <div class="mobile-menu bg-second">
-            <a href="#" class="mb-logo">HD Electronic Shop</a>
+            <a href="#" class="mb-logo">Lire +</a>
             <span class="mb-menu-toggle" id="mb-menu-toggle">
                 <i class='bx bx-menu'></i>
             </span>
@@ -40,10 +40,10 @@
                 <div class="top-header container">
                     <ul class="devided">
                         <li>
-                            <a href="#">+84123456789</a>
+                            <a href="#">+950508966</a>
                         </li>
                         <li>
-                            <a href="#">HD_ElectronicShop@mail.com</a>
+                            <a href="#">lire+inc@mail.com</a>
                         </li>
                     </ul>
                     <ul class="devided">
@@ -57,16 +57,16 @@
                             </ul>
                         </li>
                         <li class="dropdown">
-                            <a href="">ENGLISH</a>
+                            <a href="">SPANISH</a>
                             <i class='bx bxs-chevron-down'></i>
                             <ul class="dropdown-content">
                                 <li><a href="#">VIETNAMESE</a></li>
                                 <li><a href="#">JAPANESE</a></li>
                                 <li><a href="#">FRENCH</a></li>
-                                <li><a href="#">SPANISH</a></li>
+                                <li><a href="#">ENGLISH</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">ORDER TRACKING</a></li>
+                        <li><a href="#">SIGUE TU PEDIDO</a></li>
                     </ul>
                 </div>
             </div>
@@ -74,7 +74,7 @@
             <!-- mid header -->
             <div class="bg-main">
                 <div class="mid-header container">
-                    <a href="#" class="logo">HD Electronic Shop</a>
+                    <a href="#" class="logo">Lire +</a>
                     <div class="search">
                         <input type="text" placeholder="Search">
                         <i class='bx bx-search-alt'></i>
@@ -93,7 +93,7 @@
             <div class="bg-second">
                 <div class="bottom-header container">
                     <ul class="main-menu">
-                        <li><a href="#">home</a></li>
+                        <li><a href="#">INICIO</a></li>
                         <!-- mega menu -->
                         <li class="mega-dropdown">
                             <a href="./products.html">Shop<i class='bx bxs-chevron-down'></i></a>
@@ -101,37 +101,27 @@
                                 <div class="row">
                                     <div class="col-3 col-md-12">
                                         <div class="box">
-                                            <h3>JBL Wireless HeadPhones</h3>
+                                            <h3>Lire + Keywords</h3>
                                             <ul>
-                                                <li><a href="#">JBL Tune 510BT</a></li>
-                                                <li><a href="#">JBL TUNE 750BTNC </a></li>
-                                                <li><a href="#">JBL Quantum 400</a></li>
-                                                <li><a href="#">JBL JR 310BT</a></li>
+                                                <li><a href="#">LR 99</a></li>
+                                                <li><a href="#">LR 001 </a></li>
+                                                <li><a href="#">LR MOST WANTED</a></li>
+                                                <li><a href="#">LR OLD SCHOOL</a></li>
                                             </ul>
                                         </div>
                                     </div>
                                     <div class="col-3 col-md-12">
                                         <div class="box">
-                                            <h3>SmartPhone</h3>
+                                            <h3>Lire + Mouse</h3>
                                             <ul>
-                                                <li><a href="#">Iphone 14 Pro Max</a></li>
-                                                <li><a href="#">Iphone 14 Pro </a></li>
-                                                <li><a href="#">Iphone 14 </a></li>
-                                                <li><a href="#">Iphone X</a></li>
+                                                <li><a href="#">LR M500</a></li>
+                                                <li><a href="#">LR MCOMFORT+ </a></li>
+                                                <li><a href="#">LR MSOFT</a></li>
+                                                <li><a href="#">LR MBULLET</a></li>
                                             </ul>
                                         </div>
                                     </div>
-                                    <div class="col-3 col-md-12">
-                                        <div class="box">
-                                            <h3>LapTop</h3>
-                                            <ul>
-                                                <li><a href="#">MacBook Air 12' 2023</a></li>
-                                                <li><a href="#">MacBook Air 13.3' 2023</a></li>
-                                                <li><a href="#">MacBook Pro 15' 2023</a></li>
-                                                <li><a href="#">MacBook Max 16' M2 2023 </a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
+                            
                                     <div class="col-3 col-md-12">
                                         <div class="box">
                                             <h3>JBL Wireless Earbuds</h3>
@@ -505,7 +495,7 @@
                 <div class="col-3 col-md-6 col-sm-12">
                     <div class="contact">
                         <h3 class="contact-header">
-                            HD Electronic Shop
+                             Lire +
                         </h3>
                         <ul class="contact-socials">
                             <li><a href="#">
