--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ Una pantalla de PC curva ofrece una experiencia más inmersiva y cómoda para la
                                 </button>
                             </div>
                             <div class="product-card-name">
-                                JBL Quantum 4000
+                                JBL Quantum 4000q
                             </div>
                             <div class="product-card-price">
                                 <span><del>$300</del></span>
